testing/Travis/testcases/prototype/shouldFail/try7.adl
CONTEXT Test IN ENGLISH

PATTERN Test7
RELATION r[A*C]
RELATION s[A*B]
RELATION t[B*C]
RULE r = s;t
RULE r |- s;t
RULE s;t
RULE r;(s=t)
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script that there are three types of rules: an equivalence, an implication, and an expression.
            It also shows that the equivalence cannot be used inside another rule, which holds for the implication as well.
   Result: FAIL
   Reason: the rule on line 10 will not parse.
   Error message:

   Parse error:

   Expecting symbol ) or symbol [ or "!" or "*" or "-" or "/" or "/\\" or ";" or "\
   \" or "\\/" or ("*" or "+" or "~" ...)*
   before "=" at line 10, column 10 of file "try7.adl"
   Try inserting symbol symbol )
-}